fix(UploadFile): add left margin to file items for better alignment

--- a/frontend/src/FileManager/Actions/UploadFile/UploadFile.action.scss
+++ b/frontend/src/FileManager/Actions/UploadFile/UploadFile.action.scss
@@ -98,6 +98,7 @@
 
         .file {
           width: 90%;
+          margin-left: 8px;
 
           .file-details {
             display: flex;
